; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_dsl_bookmark.c_dsl_bookmark_create_redacted.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_dsl_bookmark.c_dsl_bookmark_create_redacted.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i8*, i8*, i32*, i32, i32** }

@dsl_bookmark_create_redacted_check = common dso_local global i32 0, align 4
@dsl_bookmark_create_redacted_sync = common dso_local global i32 0, align 4
@ZFS_SPACE_CHECK_NORMAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dsl_bookmark_create_redacted(i8* %0, i8* %1, i32 %2, i32* %3, i8* %4, i32** %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32**, align 8
  %13 = alloca %struct.TYPE_3__, align 8
  store i8* %0, i8** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store i8* %4, i8** %11, align 8
  store i32** %5, i32*** %12, align 8
  %14 = load i8*, i8** %7, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  store i8* %14, i8** %15, align 8
  %16 = load i8*, i8** %8, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 1
  store i8* %16, i8** %17, align 8
  %18 = load i32**, i32*** %12, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 5
  store i32** %18, i32*** %19, align 8
  %20 = load i32, i32* %9, align 4
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 4
  store i32 %20, i32* %21, align 8
  %22 = load i32*, i32** %10, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 3
  store i32* %22, i32** %23, align 8
  %24 = load i8*, i8** %11, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 2
  store i8* %24, i8** %25, align 8
  %26 = load i8*, i8** %7, align 8
  %27 = load i32, i32* @dsl_bookmark_create_redacted_check, align 4
  %28 = load i32, i32* @dsl_bookmark_create_redacted_sync, align 4
  %29 = load i32, i32* @ZFS_SPACE_CHECK_NORMAL, align 4
  %30 = call i32 @dsl_sync_task(i8* %26, i32 %27, i32 %28, %struct.TYPE_3__* %13, i32 5, i32 %29)
  ret i32 %30
}

declare dso_local i32 @dsl_sync_task(i8*, i32, i32, %struct.TYPE_3__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
